--- a/src/defaultV2-theme/blocks/sd-question.scss
+++ b/src/defaultV2-theme/blocks/sd-question.scss
@@ -23,6 +23,12 @@
   margin-bottom: var(--sd-base-padding);
   border-radius: calcCornerRadius(1) calcCornerRadius(1) 0 0;
 }
+.sd-question--left>.sd-element__erbox--above-element {
+  margin-bottom: 0;
+}
+.sd-element--with-frame.sd-question--left>.sd-element__erbox--above-element {
+  margin-bottom: calc(1 * var(--sd-base-vertical-padding));
+}
 
 .sd-element--with-frame>.sd-question__erbox--below-question {
   margin-top: auto;
@@ -82,7 +88,6 @@
 .sd-question__header--location--left {
   display: inline-block;
   width: auto;
-  max-width: 50%;
   vertical-align: top;
   margin-top: calcSize(1.5);
 }
@@ -91,12 +96,17 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  column-gap: calcSize(3);
+  row-gap: calc(0.25 * var(--sd-base-vertical-padding));
 }
 
 .sd-question__content--left {
   display: inline-block;
-  padding-left: calcSize(3);
   flex: 1;
+  margin-top: calc(0.25 * var(--sd-base-vertical-padding)) 0;
+}
+.sd-element--with-frame > .sd-question__content--left {
+  margin: 0;
 }
 
 .sd-question__required-text {
