--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -1,3 +1,4 @@
+@import "../variables.scss";
 .sd-file {
   position: relative;
   font-size: calcFontSize(1);
@@ -37,6 +38,11 @@
   }
 }
 
+@container (max-width: #{$sd-panel-medium-min-width}) {
+  .sd-file {
+    min-height: calcSize(30);
+  }
+}
 .sd-file__decorator {
   display: flex;
   flex-direction: column;
@@ -48,10 +54,15 @@
   box-sizing: border-box;
   justify-content: center;
   align-items: center;
-  padding: 0 calcSize(8);
+  padding: 0 calcSize(1);
   border: 1px dashed $border;
 }
 
+@container (min-width: #{$sd-panel-normal-min-width}) {
+  .sd-file__decorator {
+    padding: 0 calcSize(8);
+  }
+}
 .sd-file__decorator--drag {
   z-index: 1;
   border: 1px solid $primary;
@@ -63,14 +74,19 @@
   display: none;
 }
 
+@container (max-width: #{$sd-panel-medium-min-width}) {
+  .sd-file__drag-area-placeholder {
+    display: none;
+  }
+}
 .sd-file__drag-area-placeholder {
-  @include useEditorFontSize;
-  text-align: center;
-  word-break: break-word;
-  white-space: normal;
-  color: $font-questionplaceholder-color;
-  font-size: $font-editorfont-size;
-  line-height: multiply(1.5, $font-editorfont-size);
+      @include useEditorFontSize;
+        text-align: center;
+        word-break: break-word;
+        white-space: normal;
+        color: $font-questionplaceholder-color;
+        font-size: $font-editorfont-size;
+        line-height: multiply(1.5, $font-editorfont-size);
 }
 
 .sd-root-modern--mobile {
@@ -93,6 +109,23 @@
   }
 }
 
+@container (max-width: #{$sd-panel-medium-min-width}) {
+  .sd-file .sd-action {
+    padding: calcSize(1);
+
+    .sv-svg-icon {
+      margin-left: 0;
+    }
+  }
+
+  .sd-file .sd-file__actions-container {
+    flex-direction: column;
+
+    span {
+      display: none;
+    }
+  }
+}
 .sd-file__choose-btn--icon {
   &>span {
     display: none;
@@ -101,6 +134,7 @@
 
 .sd-file__wrapper {
   width: max-content;
+  max-width: 100%;
 }
 
 .sd-question--answered {
@@ -111,6 +145,8 @@
 
 .sd-file__actions-container {
   margin-top: calcSize(0.5);
+  flex-wrap: wrap;
+    justify-content: center;
 
   .sv-action--hidden {
     display: none;
