--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -6,7 +6,8 @@
   min-height: calcSize(36);
   box-sizing: border-box;
   padding: 0 calcSize(6);
-
+  container-type: inline-size;
+  
   .sv-action-bar {
     padding: calcSize(1) 0;
     justify-content: center;
@@ -38,11 +39,6 @@
   }
 }
 
-@container (max-width: #{$sd-panel-medium-min-width}) {
-  .sd-file {
-    min-height: calcSize(30);
-  }
-}
 .sd-file__decorator {
   display: flex;
   flex-direction: column;
@@ -54,13 +50,13 @@
   box-sizing: border-box;
   justify-content: center;
   align-items: center;
-  padding: 0 calcSize(1);
+  padding: 0 calcSize(8);
   border: 1px dashed $border;
 }
 
-@container (min-width: #{$sd-panel-normal-min-width}) {
-  .sd-file__decorator {
-    padding: 0 calcSize(8);
+@container (max-width: #{$sd-panel-normal-min-width - 96px}) {
+  .sd-file__drag-area .sd-file__decorator {
+    padding: 0 calcSize(1);
   }
 }
 .sd-file__decorator--drag {
@@ -74,19 +70,19 @@
   display: none;
 }
 
-@container (max-width: #{$sd-panel-medium-min-width}) {
+@container (max-width: #{$sd-panel-medium-min-width - 96px}) {
   .sd-file__drag-area-placeholder {
     display: none;
   }
 }
 .sd-file__drag-area-placeholder {
-      @include useEditorFontSize;
-        text-align: center;
-        word-break: break-word;
-        white-space: normal;
-        color: $font-questionplaceholder-color;
-        font-size: $font-editorfont-size;
-        line-height: multiply(1.5, $font-editorfont-size);
+  @include useEditorFontSize;
+    text-align: center;
+    word-break: break-word;
+    white-space: normal;
+    color: $font-questionplaceholder-color;
+    font-size: $font-editorfont-size;
+    line-height: multiply(1.5, $font-editorfont-size);
 }
 
 .sd-root-modern--mobile {
@@ -109,7 +105,7 @@
   }
 }
 
-@container (max-width: #{$sd-panel-medium-min-width}) {
+@container (max-width: #{$sd-panel-medium-min-width - 96px}) {
   .sd-file .sd-action {
     padding: calcSize(1);
 
