#7552 File question adaptivity - fixed normal behaviour for answered question Fixes #7552

--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -53,6 +53,11 @@
   container-type: inline-size;
 }
 
+.sd-file--answered {
+  .sd-file__decorator {
+    container-type: unset;
+  }
+}
 .sd-file__decorator--drag {
   z-index: 1;
   border: 1px solid $primary;
