--- a/src/defaultV2-theme/blocks/sd-item.scss
+++ b/src/defaultV2-theme/blocks/sd-item.scss
@@ -15,7 +15,7 @@
   border: none;
   flex-shrink: 0;
   margin-top: calc(calc(multiply(1.5, $font-editorfont-size) - calcSize(3)) / 2);
-  box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.15), 0 0 0 0px $primary;
+  box-shadow: $shadow-inner, 0 0 0 0px $primary;
   transition: box-shadow 250ms, background 250ms;
 }
 
@@ -30,7 +30,7 @@
 .sd-item__control:focus+.sd-item__decorator {
   background: $question-background;
   outline: none;
-  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.15), 0 0 0 2px $primary;
+  box-shadow: $shadow-inner-reset, 0 0 0 2px $primary;
 }
 
 .sd-item--allowhover .sd-selectbase__label:hover .sd-item__decorator {
