--- a/packages/survey-angular-ui/src/questions/matrix.component.html
+++ b/packages/survey-angular-ui/src/questions/matrix.component.html
@@ -43,7 +43,7 @@
                     [attr.id]="model.inputId + '_' + row.name + '_' + columnIndex"
                     (change)="onChange(row, column)"
                     [attr.aria-required]="model.a11y_input_ariaRequired"
-                    [attr.aria-label]="model.getCellAriaLabel(row.locText.text, column.locText.text)"
+                    [attr.aria-label]="model.getCellAriaLabel(row.locText.renderedHtml, column.locText.renderedHtml)"
                     [attr.aria-invalid]="model.a11y_input_ariaInvalid"
                     [attr.aria-describedby]="model.a11y_input_ariaDescribedBy"
                   />
