FIx markup tests #7570

--- a/packages/survey-angular-ui/src/questions/matrix.component.html
+++ b/packages/survey-angular-ui/src/questions/matrix.component.html
@@ -52,7 +52,7 @@
                       <use [attr.xlink:href]="model.itemSvgIcon"></use>
                     </svg> 
                   </span>
-                  <span [visible]="model.isMobile" [class]="model.cssClasses.cellResponsiveTitle" [model]="column.locText" sv-ng-string></span>
+                  <span *ngIf="model.isMobile" [class]="model.cssClasses.cellResponsiveTitle" [model]="column.locText" sv-ng-string></span>
                 </label>
               </td>
             </ng-container>
