--- a/src/defaultV2-theme/blocks/sd-input.scss
+++ b/src/defaultV2-theme/blocks/sd-input.scss
@@ -13,10 +13,15 @@
   color: $font-editorfont-color;
   font-size: $font-editorfont-size;
   background-color: $editor-background;
-  box-shadow: $shadow-inner;
   border: none;
   border-radius: $editor-corner-radius;
   text-align: start;
+  box-shadow: $shadow-inner, 0 0 0 0px $primary;
+  transition: box-shadow 250ms;
+}
+
+.sd-input:focus {
+  box-shadow: $shadow-inner-reset, 0 0 0 2px $primary;
 }
 
 .sd-input.sd-input:focus {
@@ -56,10 +61,6 @@ textarea {
 .sd-root--readonly .sd-input--disabled,
 .sd-root--readonly .sd-input--disabled::placeholder {
   color: $foreground;
-}
-
-.sd-input:focus {
-  box-shadow: 0 0 0 2px $primary;
 }
 
 .sd-input--error {
