Optimize single matrix rendering performance fix #7570 (#7571)
* Optimize single matrix rendering performance fix #7570

* Fix markup tests #7570

* FIx markup tests #7570

--- a/src/knockout/templates/question-matrix.html
+++ b/src/knockout/templates/question-matrix.html
@@ -57,9 +57,11 @@
                       </svg>  
                     <!-- /ko -->
                 </span>
-                <span data-bind="visible: question.isMobile, css: question.cssClasses.cellResponsiveTitle">
+                <!-- ko if: question.isMobile -->
+                <span data-bind="css: question.cssClasses.cellResponsiveTitle">
                   <!-- ko template: { name: 'survey-string', data: $data.locText } --><!-- /ko -->
                 </span>
+                <!-- /ko -->
               </label>
             </td>
             <!-- /ko -->
