--- a/src/common-styles/window.scss
+++ b/src/common-styles/window.scss
@@ -3,24 +3,14 @@
   bottom: 16px;
   right: 16px;
   border-radius: 8px;
-  box-shadow: $shadow-large;
+  border: 1px solid $border-inside;
+  box-shadow: $shadow-large, $shadow-medium;
   background-clip: padding-box;
   z-index: 100;
-  max-height: 100vh;
+  max-height: 90vh;
   overflow: auto;
   box-sizing: border-box;
 }
-
-.sv_window_content {
-    box-shadow: $shadow-medium;
-    width: 100%;
-    height: 100%;
-    border: 1px solid $border-inside;
-    background-clip: padding-box;
-    border-radius: 8px;
-    box-sizing: border-box;
-    overflow: hidden;
-} 
 
 .sv_window--collapsed {
     .sv_window_header {
