temporary disalbed animation (https://github.com/surveyjs/survey-library/issues/7498)

--- a/src/defaultV2-theme/blocks/sd-radio.scss
+++ b/src/defaultV2-theme/blocks/sd-radio.scss
@@ -8,7 +8,7 @@
     height: calcSize(1);
     border-radius: 50%;
     background-color: transparent;
-    transition: background-color 250ms;
+    //transition: background-color 250ms;
   }
 }
 .sd-radio--checked .sd-radio__decorator:after {
