--- a/packages/survey-angular-ui/src/question.component.html
+++ b/packages/survey-angular-ui/src/question.component.html
@@ -2,17 +2,18 @@
   <div *ngIf="!!model" #elementContainer [class]="model.getRootCss()" [style]="model.getRootStyle()" [id]="model.id" [attr.data-name]="model.name" [attr.role]="model.ariaRole" [attr.aria-required]="model.ariaRequired" [attr.aria-invalid]="model.ariaInvalid" [attr.aria-labelledby]="model.ariaLabelledBy" [attr.aria-expanded]="model.ariaExpanded">
     <div *ngIf="model.showErrorsAboveQuestion && model.hasVisibleErrors" [element]="model" sv-ng-errors></div>
     <div [element]="model" *ngIf="model.hasTitleOnLeftTop" sv-ng-element-header></div>
-    <div [class]="model.cssContent" role="presentation" [visible]="!model.isCollapsed">
-      <div *ngIf="model.showErrorOnTop && model.hasVisibleErrors" [element]="model" sv-ng-errors></div>
-      <ng-template [component]="{ name: getQuestionContentWrapperComponentName(), data: getQuestionContentWrapperComponentData(), default: 'skeleton-question' }">
-      </ng-template>
-      <div *ngIf="model.hasComment" [class]="model.getCommentAreaCss(false)">
-        <div [model]="model.locCommentText" sv-ng-string></div>
-        <sv-ng-comment [question]="model"></sv-ng-comment>
+    <ng-template [component]="{ name: getQuestionContentWrapperComponentName(), data: getQuestionContentWrapperComponentData() }">
+      <div [class]="model.cssContent" role="presentation" [visible]="!model.isCollapsed">
+        <div *ngIf="model.showErrorOnTop && model.hasVisibleErrors" [element]="model" sv-ng-errors></div>
+        <ng-template [component]="{ name: getComponentName(), data: { model: model }, default: 'skeleton-question' }"></ng-template>
+        <div *ngIf="model.hasComment" [class]="model.getCommentAreaCss(false)">
+          <div [model]="model.locCommentText" sv-ng-string></div>
+          <sv-ng-comment [question]="model"></sv-ng-comment>
+        </div>
+        <div *ngIf="model.showErrorOnBottom && model.hasVisibleErrors" [element]="model" sv-ng-errors></div>
+        <div *ngIf="model.hasDescriptionUnderInput" [class]="model.cssDescription" [model]="model.locDescription" sv-ng-string></div>
       </div>
-      <div *ngIf="model.showErrorOnBottom && model.hasVisibleErrors" [element]="model" sv-ng-errors></div>
-      <div *ngIf="model.hasDescriptionUnderInput" [class]="model.cssDescription" [model]="model.locDescription" sv-ng-string></div>
-  </div>
+    </ng-template>
     <div [element]="model" *ngIf="model.hasTitleOnBottom" sv-ng-element-header></div>
     <div *ngIf="model.showErrorsBelowQuestion && model.hasVisibleErrors" [element]="model" sv-ng-errors></div>
   </div>
