Fixed #7596 - Dynamic panel has wrong focus for tabs

--- a/src/defaultV2-theme/blocks/sd-paneldynamic.scss
+++ b/src/defaultV2-theme/blocks/sd-paneldynamic.scss
@@ -197,7 +197,9 @@
     overflow-x: hidden;
     white-space: nowrap;
 
-    &:hover {
+    &:hover,
+    &:focus-visible {
+        outline: none;
         box-shadow: inset 0px -2px 0px $primary;
     }
 }
