#7595 Dynamic matrix expand button has wrong focus. Fixes #7595

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -284,9 +284,10 @@
     fill: $font-questiondescription-color;
   }
 
-  &:hover {
+    &:hover,
+    &:focus {
     background: $primary-light;
-
+    outline: none;
     svg {
       fill: $primary;
     }
