work for the https://github.com/surveyjs/service/issues/1668

--- a/src/common-styles/window.scss
+++ b/src/common-styles/window.scss
@@ -15,6 +15,11 @@
   box-sizing: border-box;
 }
 
+.sv_window_content {
+    border-radius: calcSize(1);
+    overflow: hidden;
+}
+
 .sv_window--collapsed {
     .sv_window_header {
         height: calcSize(4);
