--- a/src/knockout/templates/question-matrixdynamic.html
+++ b/src/knockout/templates/question-matrixdynamic.html
@@ -46,7 +46,7 @@
       <!-- /ko -->
   </div>
 </script>
-<script type="text/html" id="survey-matrixcell">
+<script type="text/html" id="survey-matrixdropdown-cell">
   <td
     data-bind="css: $data.className, style: { minWidth: $data.minWidth, width: $data.width }, attr: { 'data-responsive-title': headers, title: $data.getTitle(), colspan: $data.colSpans }, event: {focusin: $data.focusIn }"
   >
@@ -153,7 +153,7 @@
         </td>
         <!-- /ko -->
         <!-- ko if: $data.hasQuestion -->
-        <!-- ko template: { name: 'survey-matrixcell', afterRender: function(els) { $data.matrix.koCellAfterRender(els, $data); } } --><!-- /ko -->
+        <!-- ko template: { name: 'survey-matrixdropdown-cell', afterRender: function(els) { $data.matrix.koCellAfterRender(els, $data); } } --><!-- /ko -->
         <!-- /ko -->
         <!-- ko if: $data.hasTitle -->
         <td
@@ -177,7 +177,7 @@
     <tfoot>
       <tr>
         <!-- ko foreach: question.koTable().footerRow.cells -->
-            <!-- ko template: { name: 'survey-matrixcell', afterRender: function(els) { $data.matrix && $data.matrix.koCellAfterRender(els, $data); } } --><!-- /ko -->
+            <!-- ko template: { name: 'survey-matrixdropdown-cell', afterRender: function(els) { $data.matrix && $data.matrix.koCellAfterRender(els, $data); } } --><!-- /ko -->
         <!-- /ko -->
       </tr>
     </tfoot>
