Fix Angular reactive #7540

--- a/packages/survey-angular-ui/src/questions/matrix.component.html
+++ b/packages/survey-angular-ui/src/questions/matrix.component.html
@@ -32,7 +32,7 @@
               *ngFor="let column of model.visibleColumns; index as columnIndex; trackBy: trackColumnByFn"
               [attr.data-responsive-title]="column.locText.renderedHtml"
               [class]="model.cssClasses.cell">
-                <ng-template [component]="{ name: model.cellComponent, data: { question: model, row: row, column: column, columnIndex: columnIndex } }"></ng-template>
+                <ng-template [component]="{ name: model.cellComponent, data: { question: model, row: row, column: column, columnIndex: columnIndex, [cellChanged]: 'onCellChange' } }"></ng-template>
               </td>
             </ng-container>
           </tr>
