Implement rows read-only for all platforms #7617

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -309,6 +309,10 @@
   padding: calcSize(1.5) calcSize(1);
 }
 
+.sd-table__cell--row-disabled .sd-table__cell--row-text {
+  opacity: 0.25;
+}
+
 .sd-matrixdynamic__content .sd-table__question-wrapper {
   position: relative;
 }
