--- a/packages/survey-angular-ui/src/questions/matrix.component.html
+++ b/packages/survey-angular-ui/src/questions/matrix.component.html
@@ -16,7 +16,7 @@
         </thead>
         <tbody>
           <tr *ngFor="let row of model.visibleRows; trackBy: trackRowByFn " [class]="row.rowClasses || undefined">
-           <td [class]="model.cssClasses.rowTextCell" [style]="{ minWidth: model.rowTitleWidth, width: model.rowTitleWidth }" *ngIf="model.hasRows">
+           <td [class]="row.css" [style]="{ minWidth: model.rowTitleWidth, width: model.rowTitleWidth }" *ngIf="model.hasRows">
               <ng-template [component]="{ name: model.getRowHeaderWrapperComponentName($any(row)), data: { componentData: model.getRowHeaderWrapperComponentData($any(row)) } }">
                 <sv-ng-string [model]="row.locText"></sv-ng-string>
               </ng-template>
