--- a/packages/survey-angular-ui/src/questions/matrixcell.component.html
+++ b/packages/survey-angular-ui/src/questions/matrixcell.component.html
@@ -5,7 +5,7 @@
     [name]="row.fullName"
     [value]="column.value"
     [checked]="row.value === column.value"
-    [disabled]="isReadOnly"
+    [disabled]="row.isReadOnly"
     [attr.id]="question.inputId + '_' + row.name + '_' + columnIndex"
     (change)="onChange()"
     [attr.aria-required]="question.a11y_input_ariaRequired"
