--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -108,21 +108,21 @@
     }
 
     .sd-table__row:first-of-type>.sd-table__cell {
-      border-top: calcSize(1) solid $background-dim-light;
+      border-top: calcSize(1) solid transparent;
     }
     .sd-table__row:last-of-type>.sd-table__cell {
-      border-bottom: calcSize(1) solid $background-dim-light;
+      border-bottom: calcSize(1) solid transparent;
     }
 
     .sd-table__row:nth-of-type(odd) {
 
-      &>td,
+      &>td.sd-table__cell,
       td:first-of-type {
-        border-color: $background-dim-light;
+        border-top-color: $background-dim-light;
+        border-bottom-color: $background-dim-light;
         background-color: $background-dim-light;
 
         &.sd-matrix__text--checked {
-          border-color: $primary-light;
           background-color: $primary-light;
         }
 
