--- a/src/defaultV2-theme/blocks/sd-question.scss
+++ b/src/defaultV2-theme/blocks/sd-question.scss
@@ -10,6 +10,9 @@
   margin-top: calcSize(1);
 }
 
+.sd-question__content--support-container-queries {
+  container-type: inline-size;
+}
 .sd-question--title-top>.sd-question__erbox--above-question {
   margin-bottom: calc(0.5 * var(--sd-base-vertical-padding));
 }
