work for the https://github.com/surveyjs/private-tasks/issues/357

--- a/src/defaultV2-theme/blocks/sd-action.scss
+++ b/src/defaultV2-theme/blocks/sd-action.scss
@@ -14,6 +14,7 @@
   font-size: $font-questiontitle-size;
   line-height: multiply(1.5, $font-questiontitle-size);
   outline: none;
+  transition: background-color 250ms;
 }
 
 .sd-action--negative {
