--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -284,10 +284,11 @@
     fill: $font-questiondescription-color;
   }
 
-    &:hover,
-    &:focus {
+  &:hover,
+  &:focus {
     background: $primary-light;
     outline: none;
+
     svg {
       fill: $primary;
     }
@@ -308,10 +309,6 @@
   text-align: left;
   min-width: calcSize(12);
   padding: calcSize(1.5) calcSize(1);
-}
-
-.sd-table__cell--row-disabled .sd-table__cell--row-text {
-  opacity: 0.25;
 }
 
 .sd-matrixdynamic__content .sd-table__question-wrapper {
@@ -424,6 +421,10 @@
 
 .sd-matrixdropdown.sd-table {
   //table-layout: fixed;
+}
+
+.sd-table__row-disabled>.sd-table__cell {
+  opacity: 0.25;
 }
 
 @mixin table_responsive {
